--- a/nmtsa_cms/home/templates/includes/navigation.html
+++ b/nmtsa_cms/home/templates/includes/navigation.html
@@ -11,9 +11,9 @@
             {% endfor %}
         </ul>
         {% if user.is_authenticated %}
-            <a href="{% url 'wagtailadmin_logout' %}" class="book-now-btn">Logout</a>
+            <a href="/accounts/logout" class="book-now-btn">Logout</a>
         {% else %}
-            <a href="{% url 'wagtailadmin_login' %}" class="book-now-btn">Login</a>
+            <a href="/accounts/login" class="book-now-btn">Login</a>
         {% endif %}
     </div>
 </nav>
