--- a/nmtsa_cms/home/templates/home/g_drive_page.html
+++ b/nmtsa_cms/home/templates/home/g_drive_page.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags wagtailimages_tags static %}
 
-{% block body_class %}template-homepage{% endblock %}
+{% block body_class %}{% endblock %}
 
 {% block content %}
 
-    <div>
+    <div class="container" style="margin-top: 100px;">
         <h1>{{ page.title }}</h1>
         <p>{{ page.hero_text }}</p>
         {% for file in page.g_drive_page_files.all %}
-            <p>{{ file.file.name }}</p>
-            <iframe src="https://drive.google.com/file/d/{{ file.file.file_id }}/preview" width="640" height="480" allow="autoplay"></iframe>
+            <div>
+                <p>{{ file.file.name }}</p>
+                <iframe src="https://drive.google.com/file/d/{{ file.file.file_id }}/preview" width="640" height="480" allow="autoplay"></iframe>
+            </div>
         {% endfor %}
         
         <h2>Groups with Access</h2>
