New-page content

--- a/nmtsa_cms/home/templates/home/contact.html
+++ b/nmtsa_cms/home/templates/home/contact.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags wagtailimages_tags %}
 {% block body_class %}{% endblock %}
+
+{% block extra_css %}
 {% block content %}
 <div class="container contact-form-container">
     <h2>Contact Us</h2>
