--- a/nmtsa_cms/home/templates/home/add_page.html
+++ b/nmtsa_cms/home/templates/home/add_page.html
@@ -1,19 +1,17 @@
 {% extends "base.html" %}
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load static wagtailcore_tags wagtailuserbar wagtailimages_tags %}
+
 
 {% block body_class %}{% endblock %}
 
 {% block content %}
-<div class="container my-5">
+
+<div class="home-container">
     <h1>{{ page.title }}</h1>
     <p>{{ page.intro }}</p>
 
     <div class="dynamic-sections">
         {% for block in page.body %}
-            <div class="debug-info">
-                <p class="hide-paragraph">Block Type: {{ block.block_type }}</p>
-                <p class="hide-paragraph">Block Value: {{ block.value }}</p>
-            </div>
 
             {% if block.block_type == "text" %}
                 <div class="text-block">
@@ -36,3 +34,4 @@
     </div>
 </div>
 {% endblock %}
+
